--- a/config/nodes/planers.yaml
+++ b/config/nodes/planers.yaml
@@ -1,10 +1,12 @@
 global_planer: #almost everything is in cells, which depends on costmap resolution
-  maximum_cost: 15 #Most important
-  maximum_jumps: 1000
-  fail_count_threshhold: 30
-  num_of_tries_for_last: 4
+  maximum_cost: 13 #Most important
+  maximum_jumps: 1300
+  fail_count_threshhold: 200 # Should be a big number (max fails mid-way) | These two share same fail counter
+  num_of_tries_for_last: 4  # Times planer can fail by max jumps         | ^
+  update_rate: 3
+  step: 2
   # Features
-  cleanup_feature: 1
+  cleanup_feature: 0 #works well if you dont have to go closer to start point during route
   resend: 1
   stuck_check_feature: 1
   experimental_cleanup_enable: 1
@@ -13,37 +15,38 @@ global_planer: #almost everything is in cells, which depends on costmap resoluti
   twist_amplify_coeff: 0.5
   consecutive_jumps_threshhold: 2 #Leave a target each 'n' straight hops
   update_stop_thresh: 8 # Dist from target, when stops updating route
-  step: 3
+  
   step_radians_resolution: 12
-  dist_to_target_threshhold: 3
-  update_rate: 0.6
+  dist_to_target_threshhold: 3 
   #!!! DANGEROUS
-  accelerate_coeff: 0.00015
+  accelerate_coeff: 0.00015 #works only when experimental cleanup is switched off, which is not adviced
   #!!!
-  dead_end_dist_diff_threshhold: 3 #if planer backtracks this number of cells, 
-  #the last point is removed (considered a dead end)
+  
                                   
   ##### dir locking
-  stuck_check_jumps: 10 #checks for 'stuck' per 'n' jumps
-  stuck_dist_threshhold: 8 #dist which should be reached in (stuck_check_jumps)
+  stuck_check_jumps: 4 #checks for 'stuck' per 'n' jumps
+  stuck_dist_threshhold: 15 #dist which should be reached in (stuck_check_jumps)
   lock_dirs: #directions which get tried one after another if planer is stuck
     - 0 # first should be always zero
-    - top
-    - left
     - left
     - right
+    - top
+    - bot
     - right
     - top
     - bot
 #### Cleanup
-  cleanup_power: 1         # number of cleanups, ussualy one is enough
+  cleanup_power: 2        # number of cleanups, ussualy one is enough
   #################################
-  cleanup_repeats_len: 8          # These two are important. Enabled by experimental cleanup.
-  cleanup_repeats_threshhold: 6   # If planer hasnt moved in (cl_repeats_len) jumps from each
+  dead_end_dist_diff_threshhold: 5 #if planer backtracks this number of cells, 
+  #the last point is removed (considered a dead end)
+  cleanup_repeats_len: 16        # These two are important. Enabled by experimental cleanup.
+  cleanup_repeats_threshhold: 30   # If planer hasnt moved in (cl_repeats_len) jumps from each
   ################################# point by (cl_rep_threshhold) cells -> All intermediate removed
 
 ##################################
 local_planer:
+  threshhold: 2 #in cells, how close to target should robot ride
   twist_amplify_coeff: 0.9 #depends on resolution, allows to skip points behind
   inertia_compensation_coeff: 0.05 #allows for shrap turns (in theory)
   # Important
@@ -63,11 +66,12 @@ local_planer:
   turn_coeff: 0.35
   min_turn_coeff: 0.28 #final!
   #speed coeffs
-  static_coeff:  1.2
+  full_path_coeff_dist: 80 #dist from target in cells at which robot goes full spd
+  static_coeff:  0.8
   min_path_coeff: 0.3 #Final!!
-  path_speed_coeff: 2 #В тугриках. Robot slows down at start and finish of the route
+  path_speed_coeff: 1 #В тугриках. Robot slows down at start and finish of the route
   cost_speed_coeff: 0.0002
-  threshhold: 2 #in cells
+  
   # Circles on which planer tries to find lowest cost position
   num_of_circles: 2
   circles_dist: 1 #in cells
