--- a/config/nodes/laser_scan_callback.yaml
+++ b/config/nodes/laser_scan_callback.yaml
@@ -1,17 +1,20 @@
 laser_scan_callback:
   update_rate: 7 # More than 7 is useless
-  rads_offset: 0 #2.093 = 120deg
+  rads_offset: 0 # radians offset of lidar front from robot first wheel 2.093 = 120deg
   enable_centre_aprox: 1
-  dist_between_dots_minimal: 0.1
+  dist_between_dots_max: 0.08
+  beacons/adjust_on_command: 1 #adjust_pos_using adjust_pos_service or all the time?
   ###############
-  minimal_x: -0.2
-  minimal_y: -0.2
+  minimal_x: -0.4
+  minimal_y: -0.4
   maximum_x: 2.4
   maximum_y: 3.4
   skip_scans: 0
+  range_max_custom: 6 #meters
   #############
+  max_dots_per_obj: 60
   objects_centre_coeff: 20 #dont even think about it, but the larger the coeff, the farther from robot aprox center of objects is
-  radius_thresh: 0.6
+  radius_thresh: 1.5
   ################
   obstacles:
     minimal_x: 0.05
@@ -27,19 +30,19 @@ laser_scan_callback:
   beacons:
     ## Features
     max_th_for_linear_adj: 0.01
-    adjust_on_command: 1
+    
     enable_adjust: 1
     pub_all: 1
     only_linear_adj: 0
     ##
     cycles_per_update: 3
-    min_rad: 0.005
-    max_rad: 0.25
+    min_rad: 0.0005
+    max_rad: 0.15
     max_dist_from_expected: 0.3
     adjust_time: 1.2
     #####################
     num_beacons: 3 #needed for proper auto-init
-    ########### BEACONS SHOULD BE INITIALISED FROM LEFT TO RIGHT!!!! (biggest x --> last beacon)
+    ########### BEACONS SHOULD BE INITIALISED FROM LEFT TO RIGHT!!!! (smallest x --> first beacon|biggest x --> last beacon)
     beacon0:
       - -0.02
       - 0.05
@@ -49,3 +52,9 @@ laser_scan_callback:
     beacon2:
       - -0.04
       - 1.96
+    # beacon3:
+    #   - 1      #meters, y
+    #   - 0.6    #meters, x
+    # beacon4:
+    #   - 1
+    #   - 1.2
