--- a/config/routes/test_route.yaml
+++ b/config/routes/test_route.yaml
@@ -2,6 +2,7 @@ tasks:
   start: 
     - move: 1/1.5/0
     - score: 10  
+    - timer: epic_timer
     - group:  #Things in group are done in parallel
       - log: "W:Testing group" 
       - sleep: 1
@@ -31,8 +32,9 @@ tasks:
     - move: 1/1.5/0
     - score: 9
     - goto: start
-
+variables:
+  default: 0
 interrupts: 
   return_to_base:
-    - interrupt_condition: "timer/main/35"
+    - interrupt_condition: "timers/epic_timer/11"
     - move: 1/0.4/1.5 
