--- a/config/routes/test_route.yaml
+++ b/config/routes/test_route.yaml
@@ -1,28 +1,14 @@
 tasks:
   start: 
+    - call: Adjust
     - move: 1/1.5/0
     - score: 10  
-    - timer: epic_timer
-    - group:  #Things in group are done in parallel
-      - log: "W:Testing group" 
-      - sleep: 1
-      - log: "E:Testing group"
     - call: Adjust
   top:
     - move: 1.5/1/1
-    - log: "E: EPIC TEST INCOMING"
-    - condition:
-      - if: "start/sleep/0/fail"
-      - do: 
-        - log: "W: EPIC TEST PASSED!"
-      - else: 
-        - log: "E: EPIC TEST FAILED!!"
+    - log: "E: We chilling on task top"
     - score: -5
     - call: ArmUp
-    - dynamic_call:
-      - MoveServo
-      - num: 0
-      - state: 1
     - sleep: 1
   left:
     - move: 0.5/1/0
@@ -36,5 +22,5 @@ variables:
   default: 0
 interrupts: 
   return_to_base:
-    - interrupt_condition: "timers/epic_timer/11"
+    - interrupt_condition: "timers/main/40"
     - move: 1/0.4/1.5 
