--- a/config/routes/test_route.yaml
+++ b/config/routes/test_route.yaml
@@ -1,27 +1,17 @@
 tasks:
-  start: 
+  top_right: 
     - call: Adjust
-    - move: 1/1.5/0
-    - score: 10  
+    - move: 1/0.55/0 #x/y/th
     - call: Adjust
-  top:
-    - move: 1.5/1/1
+  top_left:
+    - move: 0.7/0.55/1
     - call: Adjust
-    - log: "E: We chilling on task top"
-    - score: -5
-    - call: ArmUp
-    - sleep: 1
-  left:
-    - move: 0.5/1/0
-    - score: 55
-    - sleep: 1
-  return:
-    - move: 1/1.5/0
-    - score: 9
-    - goto: start
+  start:
+    - call: Adjust
+    - move: 0.8/0.4/0
+    - score: 7
+    - call: Adjust
 variables:
   default: 0
-interrupts: 
-  return_to_base:
-    - interrupt_condition: "timers/main/40"
-    - move: 1/0.4/1.5 
+
+
