--- a/config/nodes/laser_scan_callback.yaml
+++ b/config/nodes/laser_scan_callback.yaml
@@ -5,6 +5,8 @@ laser_scan_callback:
   dist_between_dots_max: 0.08
   beacons/adjust_on_command: 1 #adjust_pos_using adjust_pos_service or all the time?
   ###############
+  twist_amplify_coeff: 0.5
+  #
   minimal_x: -0.4
   minimal_y: -0.4
   maximum_x: 2.4
