--- a/config/routes/test_route.yaml
+++ b/config/routes/test_route.yaml
@@ -1,17 +1,19 @@
-tasks:
+tasks: #move: x/y/th
   top_right: 
     - call: ArmUp
+    - call: ArmHalfUp
+    - call: ArmHalfDown
+    - call: ArmDown
     - call: Adjust
-    - move: 1/0.55/0 #x/y/th
+    - move: 1.02/0.44/0 
     - call: Adjust
   top_left:
-    - move: 0.7/0.55/1
+    - move: 1.62/0.44/1
     - call: Adjust
   start:
+    - move: 0.8/0.4/3.6
     - call: Adjust
-    - move: 0.8/0.4/0
     - score: 1000
-    - call: Adjust
 variables:
   default: 0
 
