--- a/config/nodes/arduino_odom.yaml
+++ b/config/nodes/arduino_odom.yaml
@@ -5,3 +5,6 @@ motors_info_callback:
   start_theta: deg(90)
   footprint_radius: 0.15
   update_rate: 20
+  theta_coeff: 1
+  y_coeff: 1
+  x_coeff: 1
