--- a/config/nodes/planers.yaml
+++ b/config/nodes/planers.yaml
@@ -46,6 +46,7 @@ global_planer: #almost everything is in cells, which depends on costmap resoluti
 
 ##################################
 local_planer:
+  skip_thresh: 5 #max points to skip if fails by cost
   threshhold: 2 #in cells, how close to target should robot ride
   twist_amplify_coeff: 0.9 #depends on resolution, allows to skip points behind
   inertia_compensation_coeff: 0.05 #allows for shrap turns (in theory)
