--- a/config/nodes/arduino_odom.yaml
+++ b/config/nodes/arduino_odom.yaml
@@ -1,8 +1,8 @@
 #rosserial_arduino: #pkg
 motors_info_callback:
-  start_x: 1
-  start_y: 0.3
-  start_theta: deg(90)
+  start_x: 1.4
+  start_y: 0.25
+  start_theta: 3.6
   footprint_radius: 0.15
   update_rate: 20
   theta_coeff: 1
