--- a/config/nodes/arduino_odom.yaml
+++ b/config/nodes/arduino_odom.yaml
@@ -2,9 +2,10 @@
 motors_info_callback:
   start_x: 1.4
   start_y: 0.25
-  start_theta: deg(220)
-  footprint_radius: 0.15
+  start_theta: 5.5
+  footprint_radius: 0.9
   update_rate: 20
+  #####
   theta_coeff: 1
   y_coeff: 1
   x_coeff: 1
