--- a/config/nodes/planers.yaml
+++ b/config/nodes/planers.yaml
@@ -60,12 +60,12 @@ local_planer:
   #Features
   cost_coeff_enable: 0
   path_coeff_enable:  1
-  #
+  #Turn
   pause_before_turn: 0.2 #seconds
-  turn_threshhold: 0.05 
-  cells_per_radian: 5
+  turn_threshhold: 0.08 
+  cells_per_radian: 5 #idk
   turn_coeff: 0.35
-  min_turn_coeff: 0.28 #final!
+  min_turn_coeff: 0.25 #final!
   #speed coeffs
   full_path_coeff_dist: 80 #dist from target in cells at which robot goes full spd
   static_coeff:  0.8
