--- a/config/nodes/laser_scan_callback.yaml
+++ b/config/nodes/laser_scan_callback.yaml
@@ -4,6 +4,9 @@ laser_scan_callback:
   enable_centre_aprox: 1
   dist_between_dots_max: 0.08
   beacons/adjust_on_command: 1 #adjust_pos_using adjust_pos_service or all the time?
+  default_side: 2 #purple - default
+  ############### TOPICS
+  side_topic: "/ebobot/begin"
   ###############
   twist_amplify_coeff: 0.5
   #
@@ -45,18 +48,22 @@ laser_scan_callback:
     #####################
     num_beacons: 3 #needed for proper auto-init
     ########### BEACONS SHOULD BE INITIALISED FROM LEFT TO RIGHT!!!! (smallest x --> first beacon|biggest x --> last beacon)
-    beacon0:
-      - -0.02
-      - 0.05
-    beacon1:
-      - 3.04 #meters, y
+    2/beacon0:
+      - 3.06
+      - 0.06
+    2/beacon1:
+      - -0.06 #meters, y
       - 1    #meters, x
-    beacon2:
-      - -0.04
-      - 1.96
-    # beacon3:
-    #   - 1      #meters, y
-    #   - 0.6    #meters, x
-    # beacon4:
-    #   - 1
-    #   - 1.2
+    2/beacon2:
+      - 3.06
+      - 1.94
+    # yellow side
+    1/beacon0:
+      - -0.06      #meters, y
+      - 0.06    #meters, x
+    1/beacon1:
+      - 3.06
+      - 1
+    1/beacon3:
+      - -0.06
+      - 1.94
