--- a/config/nodes/laser_scan_callback.yaml
+++ b/config/nodes/laser_scan_callback.yaml
@@ -17,7 +17,8 @@ laser_scan_callback:
   skip_scans: 0
   range_max_custom: 6 #meters
   #############
-  max_dots_per_obj: 60
+  min_dots: 1
+  max_dots_per_obj: 40
   objects_centre_coeff: 20 #dont even think about it, but the larger the coeff, the farther from robot aprox center of objects is
   radius_thresh: 1.5
   ################
@@ -42,7 +43,7 @@ laser_scan_callback:
     ##
     cycles_per_update: 3
     min_rad: 0.0005
-    max_rad: 0.15
+    max_rad: 0.1
     max_dist_from_expected: 0.3
     adjust_time: 1.2
     #####################
