--- a/config/nodes/costmap_server.yaml
+++ b/config/nodes/costmap_server.yaml
@@ -1,7 +1,7 @@
 costmap_server:
   # Features
   publish_on_obstacles_recieve: 1 #republish map only when recieving new list of obstacles, overrides update_rate
-  inflate_enable: 1 #use map directly, or inflate it beforehand
+  #inflate_enable: 1 #use map directly, or inflate it beforehand
   write_map_enable: 1 #write inflated map and mask (mask is for debug)
   interpolate_enable: 0
   inflation_nonlinear_enable: 0 #not tested btw)
