--- a/config/nodes/arduino_odom.yaml
+++ b/config/nodes/arduino_odom.yaml
@@ -5,13 +5,13 @@ motors_info_callback:
   #
   2/start_x: 1.4
   2/start_y: 0.25
-  2/start_theta: rad(90)
+  2/start_theta: 1.57
   ########
   1/start_x: 1.4
   1/start_y: 2.75
-  1/start_theta: 5.5
+  1/start_theta: 4.71
   ########
-  footprint_radius: rad(270)
+  footprint_radius: 0.15
   update_rate: 20
   #####
   theta_coeff: 1
