--- a/config/routes/new_route.yaml
+++ b/config/routes/new_route.yaml
@@ -2,33 +2,38 @@ tasks:
   flip_ohms_second:
     - call: ArmDown
     - change_var: get_flipped_var/add/1 #delete later
-    - move: 0.35/0.88/3.1415
+    - move: 0.35/0.88/2.01
     - call: ArmHalfDown
     - move: 0.18/0.88/2.01
     - score: 5
     - move: 0.35/0.88/2.01
     - call: ArmDown
   get_flipped: 
-    - move: 1.6/1.74/5.2
+    - move: 1.6/1.37/-1.1
     - call: Adjust
     - call: ArmHalfDown
     - call: PumpOn
-    - move: 1.7/1.74/5.2
+    - move: 1.7/1.37/-1.1
+    - move: 1.6/1.37/-1.1
     - change_var: get_flipped_var/add/1
     - call: ArmUp
     - score: 1
     #- goto: get_flipped_var
   deliver_blue_flipped:
-    - log: "E: Delivering blue"
-    - move: 1.75/0.6/5.2
+    - log: "W: Delivering blue"
+    - move: 1.6/1.37/-1.1
+    - move: 1.75/0.6/-1.1
     - call: Adjust
     - call: ValveOn
     - call: PumpOff
     - call: ValveOff
     - score: 3
     - call: ArmUp
-    - move: 1.75/0.5/5.2
+    - move: 1.6/1.37/-1.1
     - call: ArmDown
+  home:
+    - log: "W: Going home!"
+    - move: 1.4/0.25/1.57
   # deliver_green_flipped:
   #   - move: 1.5/1/3.5
   #   - call: Adjust
