--- a/config/routes/new_route.yaml
+++ b/config/routes/new_route.yaml
@@ -3,7 +3,7 @@ tasks:
     - call: ArmDown
     - change_var: get_flipped_var/add/1 #delete later
     - move: 0.35/0.88/2.01
-    - call: ArmHalfDown
+    - call: ArmHalfUp
     - move: 0.18/0.88/2.01
     - score: 5
     - move: 0.35/0.88/2.01
@@ -13,43 +13,27 @@ tasks:
     - call: Adjust
     - call: ArmHalfDown
     - call: PumpOn
-    - move: 1.7/1.37/-1.1
+    - move: 1.75/1.37/-1.1
     - move: 1.6/1.37/-1.1
     - change_var: get_flipped_var/add/1
     - call: ArmUp
     - score: 1
-    #- goto: get_flipped_var
   deliver_blue_flipped:
     - log: "W: Delivering blue"
-    - move: 1.6/1.37/-1.1
-    - move: 1.75/0.6/-1.1
+    - move: 1.6/0.61/-1.1
+    - move: 1.75/0.61/-1.1
     - call: Adjust
     - call: ValveOn
     - call: PumpOff
     - call: ValveOff
     - score: 3
     - call: ArmUp
-    - move: 1.6/1.37/-1.1
+    - move: 1.6/0.61/-1.1
     - call: ArmDown
   home:
     - log: "W: Going home!"
     - move: 1.4/0.25/1.57
-  # deliver_green_flipped:
-  #   - move: 1.5/1/3.5
-  #   - call: Adjust
-  #   - log: "E: Delivering green"
-  #   - score: -5
-  #   - call: ArmUp
-  #   - sleep: 1
-  #   - goto: get_flipped
-  # deliver_red_flipped:
-  #   - move: 1.5/1/3.5
-  #   - call: Adjust
-  #   - log: "E: Delivering red"
-  #   - score: -5
-  #   - call: ArmUp
-  #   - sleep: 1
-
+    - score: 20
 
 variables: #MUST BE INTS
   default: 0
