--- a/config/routes/new_route.yaml
+++ b/config/routes/new_route.yaml
@@ -37,7 +37,7 @@ tasks:
 variables: #MUST BE INTS
   default: 0
   get_flipped_var: 1 
-interrupts: 
+#interrupts: 
   # return_to_base:
   #   - interrupt_condition: "timers/main/40"
   #   - move: 1/0.4/1.5 
