--- a/config/nodes/planers.yaml
+++ b/config/nodes/planers.yaml
@@ -1,12 +1,12 @@
 global_planer: #almost everything is in cells, which depends on costmap resolution
-  maximum_cost: 13 #Most important
+  maximum_cost: 12 #Most important
   maximum_jumps: 1300
   fail_count_threshhold: 200 # Should be a big number (max fails mid-way) | These two share same fail counter
   num_of_tries_for_last: 4  # Times planer can fail by max jumps         | ^
   update_rate: 3
   step: 2
   # Features
-  cleanup_feature: 0 #works well if you dont have to go closer to start point during route
+  cleanup_feature: 1 #works well if you dont have to go closer to start point during route
   resend: 1
   stuck_check_feature: 1
   experimental_cleanup_enable: 1
@@ -29,6 +29,8 @@ global_planer: #almost everything is in cells, which depends on costmap resoluti
   lock_dirs: #directions which get tried one after another if planer is stuck
     - 0 # first should be always zero
     - left
+    - left
+    - bot
     - right
     - top
     - bot
@@ -38,10 +40,10 @@ global_planer: #almost everything is in cells, which depends on costmap resoluti
 #### Cleanup
   cleanup_power: 2        # number of cleanups, ussualy one is enough
   #################################
-  dead_end_dist_diff_threshhold: 5 #if planer backtracks this number of cells, 
+  dead_end_dist_diff_threshhold: 4 #if planer backtracks this number of cells, 
   #the last point is removed (considered a dead end)
   cleanup_repeats_len: 5       # These two are important. Enabled by experimental cleanup.
-  cleanup_repeats_threshhold: 6   # If planer hasnt moved in (cl_repeats_len) jumps from each
+  cleanup_repeats_threshhold: 7   # If planer hasnt moved in (cl_repeats_len) jumps from each
   ################################# point by (cl_rep_threshhold) cells -> All intermediate removed
 
 ##################################
