--- a/config/routes/calls/calls_dict.yaml
+++ b/config/routes/calls/calls_dict.yaml
@@ -69,7 +69,17 @@
       - write: true
       - pullup: false
       - value: 0
-      
+  - "AdjustOn":
+    - adjust_toggle_service:
+      - toggle: true
+  - "AdjustOff":
+    - adjust_toggle_service:
+      - toggle: false
+
+
+
+
+#########
 "Dynamic": #plain call of service, but one at a time!
   - "Example": #with kwargs!
     - service_name # call with args passed as: {service_arg_1: arg1, service_arg_2: arg2}
