--- a/config/nodes/planers.yaml
+++ b/config/nodes/planers.yaml
@@ -68,10 +68,10 @@ local_planer:
   turn_threshhold: 0.09 
   cells_per_radian: 5 #in how many cells should robot turn by one radian (max turn speed)
   turn_coeff: 0.35
-  min_turn_coeff: 0.15 #final!
+  min_turn_coeff: 0.2 #final!
   #speed coeffs
-  full_path_coeff_dist: 80 #dist from target in cells at which robot goes full spd
-  static_coeff:  0.8
+  full_path_coeff_dist: 60 #dist from target in cells at which robot goes full spd (the lower the slower)
+  static_coeff:  0.7
   min_path_coeff: 0.24 #Final!!
   path_speed_coeff: 1 #В тугриках. Robot slows down at start and finish of the route
   cost_speed_coeff: 0.0002
