--- a/config/nodes/planers.yaml
+++ b/config/nodes/planers.yaml
@@ -70,7 +70,7 @@ local_planer:
   turn_coeff: 0.35
   min_turn_coeff: 0.2 #final!
   #speed coeffs
-  full_path_coeff_dist: 60 #dist from target in cells at which robot goes full spd (the lower the slower)
+  full_path_coeff_dist: 80 #dist from target in cells at which robot goes full spd (the lower the faster)
   static_coeff:  0.7
   min_path_coeff: 0.24 #Final!!
   path_speed_coeff: 1 #В тугриках. Robot slows down at start and finish of the route
