--- a/config/routes/test_route.yaml
+++ b/config/routes/test_route.yaml
@@ -1,5 +1,6 @@
 tasks: #move: x/y/th
   init:
+    - call: AdjustOn
     - change_var: test_var/add/999 #delete later
     - log: "VAR:test_var"
     - call: PumpOn
@@ -14,20 +15,16 @@ tasks: #move: x/y/th
     - sleep: 0.5
     - call: ArmDown
     - sleep: 0.5
-    - call: Adjust
   top_right: 
     - move: 1.02/0.44/0 
-    - call: Adjust
     - call: PumpOff
     - sleep: 0.5
     - call: ValveOff
     - sleep: 0.5
   top_left:
     - move: 1.62/0.44/0
-    - call: Adjust
   start:
     - move: 1.4/0.25/1.57
-    - call: Adjust
     - score: 1000
 variables:
   default: 0
