--- a/config/routes/new_route.yaml
+++ b/config/routes/new_route.yaml
@@ -1,5 +1,6 @@
 tasks:
   flip_ohms_second:
+    - call: AdjustOn
     - score: 10 #One flipped right
     - call: ArmDown
     - move: 0.35/0.86/2.07
