--- a/config/nodes/laser_scan_callback.yaml
+++ b/config/nodes/laser_scan_callback.yaml
@@ -37,16 +37,19 @@ laser_scan_callback:
   beacons:
     ## Features
     max_th_for_linear_adj: 0.05
-    
+    #
+    max_th_adj: 0.2 #radians
+    max_pos_adj: 0.3 #meters
+    #
     enable_adjust: 1
     pub_all: 1
     only_linear_adj: 0
     ##
-    cycles_per_update: 2
+    cycles_per_update: 4
     min_rad: 0.0005
     max_rad: 0.1
     max_dist_from_expected: 0.3
-    adjust_time: 3
+    adjust_time: 1
     #####################
     num_beacons: 3 #needed for proper auto-init
     ########### BEACONS SHOULD BE INITIALISED FROM LEFT TO RIGHT!!!! (smallest x --> first beacon|biggest x --> last beacon)
