--- a/config/nodes/laser_scan_callback.yaml
+++ b/config/nodes/laser_scan_callback.yaml
@@ -7,6 +7,7 @@ laser_scan_callback:
   beacons/enable_adjust_toggle: 1
   default_side: 2 #purple - default
   ############### TOPICS
+  disable_adjust_sec_topic: /disable_adjust_sec
   side_topic: "/ebobot/begin"
   ###############
   twist_amplify_coeff: 0.4
