--- a/config/nodes/planers.yaml
+++ b/config/nodes/planers.yaml
@@ -49,11 +49,16 @@ global_planer: #almost everything is in cells, which depends on costmap resoluti
 
 ##################################
 local_planer:
+  ##############
+  #Topics:
+  disable_adjust_sec_topic: /disable_adjust_sec
+  ###############
   skip_thresh: 5 #max points to skip if fails by cost
   threshhold: 1.5 #in cells, how close to target should robot ride
   twist_amplify_coeff: 0.9 #depends on resolution, allows to skip points behind
   inertia_compensation_coeff: 0.05 #allows for shrap turns (in theory)
   # Important
+  disable_adjust_sec_time: 3
   cost_threshhold: 10000 #100 are walls, then there is inflation
   safe_footprint_radius: 0.20
   update_rate: 20 # in Hz
