--- a/config/nodes/planers.yaml
+++ b/config/nodes/planers.yaml
@@ -3,44 +3,49 @@ global_planer: #almost everything is in cells, which depends on costmap resoluti
   maximum_jumps: 1300
   fail_count_threshhold: 200 # Should be a big number (max fails mid-way) | These two share same fail counter
   num_of_tries_for_last: 4  # Times planer can fail by max jumps         | ^
-  update_rate: 10
-  step: 2
+  update_rate: 8
+  step: 4
   # Features
   cleanup_feature: 1 #works well if you dont have to go closer to start point during route
   resend: 1
   stuck_check_feature: 1
   experimental_cleanup_enable: 1
   #
-  recovery_cost_step: 0.5 #if stuck in beginnig increases allowed cost
+  recovery_cost_step: 3 #if stuck in beginnig increases allowed cost (DIVIDED BY UPDATE RATE)
+  #
   twist_amplify_coeff: 0.02
   consecutive_jumps_threshhold: 2 #Leave a target each 'n' straight hops
-  update_stop_thresh: 8 # Dist from target, when stops updating route
+  
   
   step_radians_resolution: 12
-  dist_to_target_threshhold: 3 
+  
   #!!! DANGEROUS
   accelerate_coeff: 0.00015 #works only when experimental cleanup is switched off, which is not adviced
   #!!!
-  
-                                  
   ##### dir locking
-  stuck_check_jumps: 10 #checks for 'stuck' per 'n' jumps
-  stuck_dist_threshhold: 15 #dist which should be reached in (stuck_check_jumps)
+  stuck_check_jumps: 5 #checks for 'stuck' per 'n' jumps
   lock_dirs: #directions which get tried one after another if planer is stuck
     - 0 # first should be always zero
     - left
+    - left
+    - right
+    - right
     - bot
+    - top
     - right
     - top
 #### Cleanup
   cleanup_power: 2        # number of cleanups, ussualy one is enough
   #################################
-  dead_end_dist_diff_threshhold: 4 #if planer backtracks this number of cells, 
-  #the last point is removed (considered a dead end)
-  cleanup_repeats_len: 5       # These two are important. Enabled by experimental cleanup.
-  cleanup_repeats_threshhold: 7   # If planer hasnt moved in (cl_repeats_len) jumps from each
+  cleanup_repeats_len: 5        # These two are important. Enabled by experimental cleanup.
   ################################# point by (cl_rep_threshhold) cells -> All intermediate removed
-
+  # MULTIPLIED BY STEP: (ALL SHOULD BE LESS THAN 1)
+  cleanup_repeats_threshhold: 0.6   # If planer hasnt moved in (cl_repeats_len) jumps from each
+  stuck_dist_threshhold: 0.4 #dist which should be reached in (stuck_check_jumps)
+  dead_end_dist_diff_threshhold: 0.7 #if planer backtracks this number of cells, the last point is removed (considered a dead end)
+  update_stop_thresh: 3 # Dist from target, when stops updating route
+  # Step is added:
+  dist_to_target_threshhold: 1  # in cells, when to draw straight line = step + n
 ##################################
 local_planer:
   ##############
