--- a/config/nodes/planers.yaml
+++ b/config/nodes/planers.yaml
@@ -66,6 +66,7 @@ local_planer:
   get_lowest_cost: 0 #correct targets to follow lowest cost route
   #Params
   #Features
+  use_timed_adj_disable: 0
   use_twist_before: 4 #targets
   cost_coeff_enable: 0
   path_coeff_enable:  1
@@ -73,7 +74,7 @@ local_planer:
   pause_before_turn: 0.2 #seconds
   turn_threshhold: 0.08
   cells_per_radian: 5 #in how many cells should robot turn by one radian (max turn speed)
-  turn_coeff: 0.8
+  turn_coeff: 0.9
   min_turn_coeff: 0.2 #final!
   #speed coeffs
   full_path_coeff_dist: 80 #dist from target in cells at which robot goes full spd (the lower the faster)
