--- a/config/routes/test_route2.yaml
+++ b/config/routes/test_route2.yaml
@@ -17,6 +17,7 @@ tasks: #move: x/y/th
     - sleep: 0.5
   top_right: 
     - move: 1.02/0.44/0 
+    - sleep: 0.5
     - call: PumpOff
     - sleep: 0.5
     - call: ValveOff
