--- a/config/nodes/new_task_manager.yaml
+++ b/config/nodes/new_task_manager.yaml
@@ -5,12 +5,12 @@ new_task_manager:
     update_rate: 10
     reduce_update_rate_for_move: 4 #how much slower move updates than statuses
   allowed_script_commands:
-    - parse
+    - parse_route
     - exec_route
     - countdown
     - set_route_suffix
   scripts: # parse/name (should be present in config/routes) ### countdown/seconds (will get rounded) ### exec_route should be last! 
-    - parse/test_route/countdown/3/exec_route   #corresponds to start_topic data 0
+    - parse_route/test_route/countdown/3/exec_route   #corresponds to start_topic data 0
     - set_route_suffix/1
     - set_route_suffix/2
-    - parse/new_route/exec_route   #corresponds to start_topic data 0
+    - parse_route/new_route/exec_route   #corresponds to start_topic data 0
