--- a/config/routes/new_route2.yaml
+++ b/config/routes/new_route2.yaml
@@ -9,7 +9,7 @@ tasks:
     #- score: 12
     - move: 0.35/0.86/2.07
     - call: ArmDown
-    - score: 10 #One flipped right
+    - score: 12 #kubik
   get_flipped: 
     - move: 1.68/1.39/-1.047
     - call: ArmHalfDown
