--- a/config/routes/new_route2.yaml
+++ b/config/routes/new_route2.yaml
@@ -9,7 +9,7 @@ tasks:
     #- score: 12
     - move: 0.35/0.86/2.07
     - call: ArmDown
-    - score: 12 #kubik
+    - score: 2 #kubik
   get_flipped: 
     - move: 1.68/1.39/-1.047
     - call: ArmHalfDown
@@ -24,6 +24,7 @@ tasks:
     - log: "W: Delivering blue"
     - move: 1.68/0.61/-1.047
     - move: 1.81/0.61/-1.047
+    #- call: ArmHalfUp
     - call: ValveOn
     - sleep: 1
     - call: PumpOff
