--- a/config/nodes/planers.yaml
+++ b/config/nodes/planers.yaml
@@ -79,9 +79,9 @@ local_planer:
   #speed coeffs
   full_path_coeff_dist: 60 #dist from target in cells at which robot goes full spd (the lower the faster)
   static_coeff:  0.8
-  min_path_coeff: 0.15 #Final!!
+  min_coeff: 0.15 #Final!!
   path_speed_coeff: 1.5 #В тугриках. Robot slows down at start and finish of the route
-  cost_speed_coeff: 0.05
+  cost_speed_coeff: 1
   
   # Circles on which planer tries to find lowest cost position
   num_of_circles: 2
